force-app/main/default/objects/Trigger_Handler_Bindings__mdt/Trigger_Handler_Bindings__mdt.object-meta.xml
<CustomObject>
    <description>Trigger Handler Binding</description>
    <label>Trigger Handler Binding</label>
    <pluralLabel>Trigger Handler Bindings</pluralLabel>
</CustomObject>