force-app/main/default/objects/Trigger_Handler_Bindings__mdt/fields/Continue_If_Exception__c.field-meta.xml
<CustomField>
    <fullName>Continue_If_Exception__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Continue If Exception</label>
    <type>Checkbox</type>
</CustomField>