force-app/main/default/objects/Trigger_Handler_Bindings__mdt/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Handler_Bindings</relationshipLabel>
    <relationshipName>Trigger_Handler_Bindings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>