force-app/main/default/objects/Trigger_Handler_Bindings__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Debug</fullName>
                <default>true</default>
                <label>Debug</label>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>