force-app/main/default/objects/Trigger_Handler_Bindings__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order of execution ( lowest value to highest value) . Thus, 1 executes first, followed by 2, 3, 4, etc</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>