force-app/main/default/objects/Trigger_Handler_Bindings__mdt/fields/Performance_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Performance_Metrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performance Metrics</label>
    <type>Checkbox</type>
</CustomField>