force-app/main/default/objects/Trigger_Handler_Bindings__mdt/fields/Trigger_Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Handler_Class__c</fullName>
    <description>Trigger Handler Class</description>
    <inlineHelpText>Trigger Handler Class</inlineHelpText>
    <label>Trigger Handler Class</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>